--- a/package.json
+++ b/package.json
@@ -50,15 +50,24 @@
         "yarn": "*"
     },
     "scripts": {
-        "start": "node src/index.js"
+        "start": "node src/index.js",
+        "kill": "taskkill -f -im node.exe"
     },
     "dependencies": {
         "bluebird": "^3.7.2",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.3",
+        "death": "^1.1.0",
         "dotenv-safe": "^8.2.0",
         "eslint": "^7.27.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.23.4"
+        "eslint-plugin-import": "^2.23.4",
+        "express": "^4.17.1",
+        "helmet": "^4.6.0",
+        "method-override": "^3.0.0",
+        "mongoose": "^5.12.12",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/node": "^15.6.1"
