start to build the user api

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+MONGO_URI=mongodb://localhost:27017/auth-microservice
+MONGO_URI_TESTS=mongodb://localhost:27017/auth-microservice
