--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "kill": "taskkill -f -im node.exe"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "bluebird": "^3.7.2",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
@@ -64,9 +65,13 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.23.4",
         "express": "^4.17.1",
+        "express-validation": "^3.0.8",
         "helmet": "^4.6.0",
+        "http-status": "^1.5.0",
+        "joi": "^17.4.0",
         "method-override": "^3.0.0",
         "mongoose": "^5.12.12",
+        "passport": "^0.4.1",
         "winston": "^3.3.3"
     },
     "devDependencies": {
