--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -1,84 +1,84 @@
 {
-    "name": "auth-microservice",
-    "version": "0.1.0",
-    "private": false,
-    "description": "",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/orassayag/auth-microservice.git"
-    },
-    "keywords": [
-        "node",
-        "node.js",
-        "auth",
-        "microservice",
-        "micro-service",
-        "eslint",
-        "airbnb",
-        "env",
-        "bluebird",
-        "dotenv",
-        "REST",
-        "API",
-        "REST API"
-    ],
-    "license": "UNLICENSED",
-    "author": "Or Assayag <orassayag@gmail.com>",
-    "contributors": [
-        {
-            "name": "Or Assayag",
-            "email": "orassayag@gmail.com",
-            "url": "https://github.com/orassayag"
-        }
-    ],
-    "main": "src/index.js",
-    "files": [
-        "src",
-        ".eslintignore",
-        ".eslintrc",
-        ".gitignore",
-        ".gitattributes",
-        ".jsbeautifyrc",
-        ".npmignore",
-        "INSTRUCTIONS.md",
-        "package-lock.json",
-        "package.json",
-        "README.md"
-    ],
-    "engines": {
-        "node": ">=8",
-        "yarn": "*"
-    },
-    "scripts": {
-        "start": "node src/index.js",
-        "kill": "taskkill -f -im node.exe"
-    },
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "bluebird": "^3.7.2",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "cross-env": "^7.0.3",
-        "death": "^1.1.0",
-        "dotenv-safe": "^8.2.0",
-        "express": "^4.18.2",
-        "express-validation": "^4.1.0",
-        "helmet": "^7.0.0",
-        "http-status": "^1.6.2",
-        "joi": "^17.9.2",
-        "jsonwebtoken": "^9.0.1",
-        "lodash": "^4.17.21",
-        "method-override": "^3.0.0",
-        "moment-timezone": "^0.5.43",
-        "mongoose": "^7.4.1",
-        "passport": "^0.6.0",
-        "randombytes": "^2.1.0",
-        "winston": "^3.10.0"
-    },
-    "devDependencies": {
-        "eslint": "^8.46.0",
-        "eslint-config-airbnb-base": "^15.0.0",
-        "eslint-plugin-import": "^2.28.0",
-        "@types/node": "^20.4.5"
+  "name": "auth-microservice",
+  "version": "0.1.0",
+  "private": false,
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/orassayag/auth-microservice.git"
+  },
+  "keywords": [
+    "node",
+    "node.js",
+    "auth",
+    "microservice",
+    "micro-service",
+    "eslint",
+    "airbnb",
+    "env",
+    "bluebird",
+    "dotenv",
+    "REST",
+    "API",
+    "REST API"
+  ],
+  "license": "MIT",
+  "author": "Or Assayag <orassayag@gmail.com>",
+  "contributors": [
+    {
+      "name": "Or Assayag",
+      "email": "orassayag@gmail.com",
+      "url": "https://github.com/orassayag"
     }
+  ],
+  "main": "src/index.js",
+  "files": [
+    "src",
+    ".eslintignore",
+    ".eslintrc",
+    ".gitignore",
+    ".gitattributes",
+    ".jsbeautifyrc",
+    ".npmignore",
+    "INSTRUCTIONS.md",
+    "package-lock.json",
+    "package.json",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=8",
+    "yarn": "*"
+  },
+  "scripts": {
+    "start": "node src/index.js",
+    "kill": "taskkill -f -im node.exe"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.7.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "death": "^1.1.0",
+    "dotenv-safe": "^8.2.0",
+    "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "helmet": "^7.0.0",
+    "http-status": "^1.6.2",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
+    "method-override": "^3.0.0",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^7.4.1",
+    "passport": "^0.6.0",
+    "randombytes": "^2.1.0",
+    "winston": "^3.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "@types/node": "^20.4.5"
+  }
 }
