--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -78,7 +78,6 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "@types/node": "^20.11.20"
+    "eslint-plugin-import": "^2.29.1"
   }
 }
