--- a/auth-microservice/package.json
+++ b/auth-microservice/package.json
@@ -76,8 +76,6 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint": "^9.1.1"
   }
-}
+}
